@@ -88,6 +88,16 @@ public static function define_admin_messages (&$adm_msgs)
 	);
 }
 
+/**
+ * Output program setting HTML for notation
+ */
+public static function program_setting_entry ($output)
+{
+	$output .= parent::program_setting_entry (
+		'pmw_bin', 'pmw', 'PMW_BIN');
+	return $output;
+}
+
 } // end of class
 
 
@@ -107,4 +117,7 @@ add_action ('scorerender_define_adm_msgs',
 
 add_action ('scorerender_check_notation_progs',
 	array( 'pmwRender', 'is_notation_usable' ), 10, 2 );
+
+add_filter ('scorerender_prog_and_file_loc',
+	array( 'pmwRender', 'program_setting_entry' ) );
 ?>
