@@ -1,3 +1,11 @@
+2009-08-01  Abel Cheung  <abelcheung@gmail.com>
+
+	* scorerender-admin.php (scorerender_admin_section_prog):
+	- Move program settings in admin page to each notation php.
+	* scorerender-class.php, notation/*.php:
+	- (program_setting_entry) New func for generating HTML fragment for
+	  admin page.
+
 2009-07-30  Abel Cheung  <abelcheung@gmail.com>
 
 	* wp-scorerender.php:
